# SafeShip

./: .env.local.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
.claude/: launch.json
.claude/agents/: code-reviewer.md  design-checker.md  sdk-builder.md
.github/actions/safeloop/: README.md  action.yml
.github/actions/safeship/: README.md  _render_comment.py  action.yml
.github/workflows/: sdk-python.yml
app/: globals.css  layout.tsx  page.tsx
app/admin/: actions.ts  page.tsx
app/admin/login/: actions.ts  page.tsx
app/api/waitlist/: route.ts
app/app/: layout.tsx
app/app/admin/: page.tsx
app/app/billing/: BillingView.tsx  loading.tsx  page.tsx
app/app/dashboard/: loading.tsx  page.tsx
app/app/onboarding/: OnboardingView.tsx  page.tsx
app/app/suggestions/: loading.tsx  page.tsx
app/app/tests/: loading.tsx  (+1 more)
app/changelog/: page.tsx
app/demo/: page.tsx
app/docs/: page.tsx
app/pricing/: page.tsx
app/privacy/: page.tsx
app/security/: page.tsx
app/status/: RunCheckNow.tsx  loading.tsx  page.tsx
app/terms/: page.tsx
components/: AppNav.tsx  Background.tsx  BrandMark.tsx  CmdKHint.tsx  CmdKPalette.tsx  CodePanel.tsx  ErrorBanner.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Nav.tsx  Pricing.tsx  Skeleton.tsx  StubScreen.tsx  SuggestLoop.tsx  WaitlistForm.tsx
components/admin/: Charts.tsx  UsersSection.tsx
components/dashboard/: DashboardLiveSection.tsx  DashboardView.tsx  FailureCards.tsx  RunsList.tsx  ScoreChart.tsx
components/docs/: QuickstartShell.tsx
components/suggestions/: SuggestionsView.tsx
components/tests/: TestsView.tsx
components/trace/: TraceDetailView.tsx
docs/: aws-summit-runbook.md
docs/decisions/: STRATEGY-HANDOFF-2026-06-17-summit.md  SUMMIT-MORNING-2026-06-17.md  competitive-research-may-2026.md  phase1-test-runner-audit.md  phase2-completion.md  phase3-llm-replay-audit.md  session-handoff-2026-06-05.md  session-handoff-2026-06-12.md  session-handoff-2026-06-13.md
evals/suggest/: README.md  failure-types.md  run.ts  score.ts
examples/: README.md
examples/cassette-replay/: README.md  build_manifest.py  demo_agent.py  safeship.yaml
lib/: access.ts  admin.ts  adminAuth.ts  alerts.ts  apiKey.server.ts  apiKey.ts  demo.ts  ingestion.ts  projects.ts  provision.ts  rateLimit.ts  resend.ts  runs.ts  stripe.ts  subscriptions.ts  suggest-core.ts  suggest.ts  suggestions.ts  supabase.ts  tests.ts
public/designs/: dashboard.html  onboarding.html  suggested-tests.html  tests.html  trace-detail.html
scripts/: db-push.mjs  e2e-stranger.ts  seed-demo.ts  smoke-suggest.mjs  verify-admin-delete.ts  verify-admin.ts  verify-demo-data.ts
scripts/cassette-demo/: manifest.json  results.json
sdks/python/: LICENSE  README.md  pyproject.toml
sdks/python/safeloop/: __init__.py  _config.py  _transport.py  _wrap.py
sdks/python/safeship/: __init__.py  _assertions.py  _config.py  _instrument.py  _testrunner.py  _transport.py  _wrap.py  cli.py
sdks/python/safeship/_providers/: __init__.py  anthropic.py  openai.py
sdks/python/tests/: conftest.py  test_assertions.py  test_cli.py  test_instrument.py  test_replay.py  test_testrunner.py  test_wrap.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
supabase/: schema.sql
(+53 files in other folders)
