[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safeloop"
version = "0.1.0"
description = "Every production failure becomes a regression test. The same bug never ships twice."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "SafeLoop", email = "founder@safeloop.dev" }
]
keywords = ["ai", "agents", "reliability", "tracing", "evals", "regression"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27,<1.0",
]

[project.urls]
Homepage = "https://safeloop.dev"
Repository = "https://github.com/ego-debug/SafeLoop"
Issues = "https://github.com/ego-debug/SafeLoop/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["safeloop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
