[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safeship"
version = "0.1.0"
description = "Every production failure becomes a regression test. The same bug never ships twice."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "SafeShip", email = "founder@safeship.dev" }
]
keywords = ["ai", "agents", "reliability", "tracing", "evals", "regression"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27,<1.0",
  "PyYAML>=6.0",
  "simpleeval>=0.9.13",
]

[project.urls]
Homepage = "https://safeship.dev"
Repository = "https://github.com/ego-debug/SafeShip"
Issues = "https://github.com/ego-debug/SafeShip/issues"

[project.scripts]
safeship = "safeship.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["safeship"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Test files commonly embed YAML/JSON fixtures inline as long strings;
# wrapping them obscures intent. Line-length is enforced everywhere else.
"tests/*" = ["E501"]
